feat: got mdx working within a component

--- a/pages/projects/uosc/index.mdx
+++ b/pages/projects/uosc/index.mdx
@@ -1,1 +1,3 @@
-# Hello World
+import ProjectDetailsPage from '../../../components/ProjectDetails/ProjectDetails';
+
+<ProjectDetailsPage># Hello World</ProjectDetailsPage>
