fix: sort articles + new prisma mongodb article

--- a/posts/how-to-use-githubs-graphql-api-with-express-js.mdx
+++ b/posts/how-to-use-githubs-graphql-api-with-express-js.mdx
@@ -1,8 +1,8 @@
 ---
 title: "How to use GitHub's GraphQL API with Express.js"
 desc: 'This article will show how you can leverage the power of GitHub GraphQL API in your express application.'
-category: 'tutorial'
-date: 'November 7, 2022'
+category: 'learning'
+date: '2022-11-07'
 ---
 
 GitHub offers a powerful REST based API for developers to get data and integrate with its platform, with API version 4, they also introduced the GitHub GraphQL API. This article will show how you can leverage the power of GitHub GraphQL API in your express application.
